--- a/sinkhole-visualization/package.json
+++ b/sinkhole-visualization/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
+    "rc-slider": "^9.7.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
