--- a/sinkhole-visualization/package.json
+++ b/sinkhole-visualization/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^5.0.0",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
+    "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
