--- a/sinkhole-visualization/package.json
+++ b/sinkhole-visualization/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-leaflet/core": "^3.0.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/centroid": "^7.2.0",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "rc-slider": "^9.7.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-leaflet": "^5.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
     "recharts": "^2.15.3",
