--- a/sinkhole-visualization/package.json
+++ b/sinkhole-visualization/package.json
@@ -10,12 +10,13 @@
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "rc-slider": "^9.7.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-leaflet": "^5.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "recharts": "^2.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
