--- a/sinkhole-visualization/package.json
+++ b/sinkhole-visualization/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@turf/centroid": "^7.2.0",
+    "@turf/turf": "^7.2.0",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "rc-slider": "^9.7.2",
