pin highlight solved, date picking only UI made(not linked with data)

--- a/sinkhole-visualization/package.json
+++ b/sinkhole-visualization/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-leaflet/core": "^3.0.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -11,9 +10,11 @@
     "@turf/centroid": "^7.2.0",
     "@turf/turf": "^7.2.0",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "rc-slider": "^9.7.2",
     "react": "^18.3.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
